Add or update languages es, fr, id, pa-PK, ru, ur and vi.

--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -32,7 +32,7 @@ fr:
   links_fns_title: "Friday Night Study"
   links_fns_href: "http://fridaynightstudy.com"
   links_fns_desc: "Friday Night Study est un groupe de croyants chrétiens qui font confiance à la Bible seulement pour guide spirituel."
-  movie_href: ~
+  movie_href: "https://www.youtube.com/embed/mUL9hsmzErs"
   movie_p1a: "7 Octobre 2015 pourrait-il la fin du monde et le début de nouveaux cieux et la nouvelle terre?"
   movie_p1b: "La Bible indique que c'est une forte possibilité."
   contact_email_desc: "Renseignements pour les médias"
