--- a/locales/id.yml
+++ b/locales/id.yml
@@ -1,38 +1,38 @@
 id:
-  page_title: "Apakah 7 Oktober 2015 adalah Hari Kiamat?"
-  page_description: "Apakah 7 Oktober 2015 adalah Hari Kiamat? Bukti dari Alkitab mengacukan bahwa tanggal 7 Oktober 2015 adalah kemungkinan besar hari terakhir di dunia ini."
-  nav_why_oct7th: "Mengapa 7 Oktober?"
-  nav_the_video: "Menonton Video"
-  nav_helpful_links: "Helpful Links"
-  intro_subtitle: ~
-  play_video: ~
-  stop_video: ~
-  view_about: ~
-  english: ~
-  about_title: "Mengapa 7 Oktober 2015?"
-  about_p1: "Untuk memberikan jawaban yang benar, pertama-tama kita akan melihat pada tanggal 21 Mei 2011. Sebenarnya, tidak mungkin untuk mengerti kenapa tanggal 7 Oktober 2015 adalah tanggal yang sangat tepat dimana Hari Kiamat akan terjadi, kecuali kalau kita benar benar memahami kenapa tanggal 21 Mei 2011 adalah permulaan dari periode penghakiman terakhir. "
-  about_p1_href: ~
-  about_p1_link: ~
-  about_p2: "Beberapa tahun yang lalu, Umat Allah meniup sangkakala dan memperingatkan seluruh dunia bahwa Hari Penghakiman akan dimulai pada tanggal 21 Mei 2011. Tanggal itu sangat dikenal diseluruh dunia; mungkin semua orang sudah mendengar bahwa ini adalah Hari Penghakiman. Hal ini tidak pernah terjadi sebelumnya dan banyak orang benar benar menghiraukannya. Pesanan ini disiarkan melalui papan-papan iklan dan diadvertensi pada bis-bis dibeberapa negara. Juga bisa terlihat pada stiker di mobil, di kaos (T-shirt), dan bahkan di kereta api metro. Banyak orang membaca tentang tanggal yang sudah makin mendekat itu di majalah, koran, atau surat kabar. Media elektronik diseluruh dunia juga meniup sangkakala dan memperingatkan tentang pesan Alkitab bahwa benar-benar tanggal 21 Mei 2011 adalah Hari Kiamat."
-  about_p3: "Sebagian besar orang-orang didunia, sepertinya menahan nafas dalam antipasi dan menunggu penghakiman Allah yang terakhir ini."
-  about_p4: "Meskipun banyak orang mengharapkan manifestasi secara fisik dari murka Allah, tetapi ternyata Allah mendatangkan penghakiman yang menghancurkan secara rohani pada tanggal 21 Mei 2011. Kita sekarang berada pada periode yang sangat gelap dalam sejarah duniawi. Kita hidup dalam periode penghakiman Allah, dan menuju pada akhir dari segala sesuatu, pemusnahan alam semesta, dan awal dari langit yang baru dan bumi yang baru. Kemungkinan besar ini akan terjadi pada tanggal 7 Oktober 2015."
-  about_p5a: "Apakah makna semua ini untuk diriku?"
-  about_p5b: "Kami mendorong Saudara untuk menonton <a href=\"#movie-player\">video</a> dan menjelajah banyak  <a href=\"#links\">informasi</a> dalam laman kami untuk mempelajari lebih dalam."
+  page_title: "Apakah hari Kiamat jatuh pada tanggal 7 Oktober 2015?"
+  page_description: "Mungkinkah hari kiamat jatuh pada tanggal 7 Oktober 2015? Bukti dari Alkitab menunjukkan bahwa tanggal 7 Oktober 2015 kemungkinan besar merupakan hari terakhir di dunia ini."
+  nav_why_oct7th: "Mengapa tanggal 7 Oktober?"
+  nav_the_video: "Lihatlah Videonya"
+  nav_helpful_links: "Jaringan yang bermanfaat"
+  intro_subtitle: "Mungkinkah Langit Baru dan Bumi Baru dimulai pada tanggal 7 Oktober 2015?"
+  play_video: "Mainkan videonya"
+  stop_video: "Hentikan videonya"
+  view_about: Lihatlah
+  english: Inggris
+  about_title: "Mengapa tanggal 7 Oktober 2015?"
+  about_p1: "Untuk memberikan sebuah jawaban yang benar, pertama-tama kita akan mulai dengan tanggal 21 Mei 2011. Sebenarnya, tidak mungkin untuk memahami mengapa tanggal 7 Oktober 2015 adalah tanggal yang sangat mungkin di mana Hari Kiamat akan terjadi, kecuali kalau kita lebih dahulu memahami mengapa tanggal 21 Mei 2011 adalah awal dari Hari Penghakiman"
+  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_link: "(klik di sini untuk memeroleh lebih banyak rincian)"
+  about_p2: "Beberapa tahun yang lalu, umat Allah meniup sangkakala dan memperingatkan seluruh dunia bahwa HARI PENGHAKIMAN akan dimulai pada tanggal 21 Mei 2011. Tanggal itu adalah hari yang paling banyak dipublikasikan di dunia sebagai Hari Penghakiman yang pernah dilihat dunia. Hal ini tidak pernah terjadi sebelumnya dan banyak orang menaruh perhatian. Pesan ini disiarkan melalui papan-papan iklan dan diiklankan pada bus-bus. Iklan ini juga bisa terlihat pada mobil-mobil, stiker di bumper mobil, pada kaos T-shirt, dan bahkan di kereta api bawah tanah. Banyak orang membaca tentang tanggal yang sudah semakin mendekat itu di majalah dan surat kabar. Media elektronik di seluruh dunia juga meniup sangkakala dan memperingatkan tentang pesan Injil bahwa tanggal 21 Mei 2011 adalah benar-benar HARI KIAMAT!"
+  about_p3: "Sebagian besar orang-orang di dunia sepertinya menahan nafas sebagai antipasi menghadapi penghakiman Allah yang terakhir ini.  "
+  about_p4: "Meskipun banyak orang mengharapkan terjadinya suatu manifestasi secara fisik dari murka Allah, tetapi kenyataannya Allah mendatangkan penghakiman spiritual yang menghancurkan pada tanggal 21 Mei 2011. Kita sekarang berada pada periode yang sangat gelap dalam sejarah dunia, sementara kita hidup dalam periode penghakiman, dan menuju pada akhir dari segala sesuatu, pemusnahan alam semesta, dan awal dari langit yang baru dan bumi yang baru, yang kemungkinan besar akan terjadi pada tanggal 7 Oktober 2015."
+  about_p5a: "Apakah makna semua ini bagi saya?"
+  about_p5b: "Kami mendorong Anda untuk menonton video <a href=\"#movie-player\">video</a> dan mengeksplorasi banyak sumber dari <a href=\"#links\">resources</a> dalam laman kami untuk mempelajarinya lebih lanjut."
   links_title: "Informasi Alkitabiah untuk Penelitian Lebih Lanjut"
   links_ebible_title: "E Bible Fellowship"
-  links_ebible_href: ~
-  links_ebible_desc: "Disini Saudara akan mendapatkan banyak pemahaman dari Alkitab dimana Saudara dapat mendengarnya secara cuma-cuma."
+  links_ebible_href: "http://www.ebiblefellowship.com"
+  links_ebible_desc: "Di sini Anda akan memeroleh banyak jam pengajaran dari Alkitab di mana Anda dapat mendengarnya secara daring dan mengunduhnya secara cuma-cuma."
   links_ebible2_title: "E Bible2"
   links_ebible2_href: "http://ebible2.com/wp-content/uploads/2015/04/indonesian-strong-likelihood-tract.pdf"
-  links_ebww_tagline: "Informasi yang mendalam tentang 7 Oktober 2015"
+  links_ebww_tagline: "Informasi yang mendalam tentang tanggal 7 Oktober 2015"
   links_ebww_href: "http://ebww.net/indonesia-bahasa/"
-  links_ebww_desc: "Informasi tentang 7 Oktober 2015 dalam beberapa bahasa (termasuk bahasa Indonesia)"
+  links_ebww_desc: "Lebih banyak sumber informasi tentang tanggal 7 Oktober 2015 "
   links_bmi_title: "Bible Ministries International"
-  links_bmi_desc: "Misi dari BMI adalah untuk memberi makanan rohani untuk anak-anak domba Allah dan untuk menyatakan keseluruh dunia bahwa kita sekarang hidup dalam periode penghakiman Allah."
+  links_bmi_desc: "Misi dari BMI adalah untuk memberi makanan rohani pada domba-domba Allah dan untuk menyatakan ke seluruh dunia bahwa kita sekarang hidup dalam periode hari penghakiman."
   links_fns_title: "Friday Night Study"
-  links_fns_href: ~
-  links_fns_desc: "Friday Night Study adalah kelompok orang Kristen yang percaya pada Alkitab dan mengandalkan hanya pada Alkitab untuk bimbingan rohani."
-  movie_href: ~
-  movie_p1a: "Apakah 7 Oktober 2015 adalah Hari Kiamat dan awal dari langit yang baru dan bumi yang baru?"
+  links_fns_href: "http://fridaynightstudy.com"
+  links_fns_desc: "Friday Night Study adalah sekelompok orang Kristen yang percaya pada Alkitab untuk mendapatkan bimbingan rohani."
+  movie_href: "http://www.youtube.com/embed/O3ExzOX31yY"
+  movie_p1a: "Mungkinkah tanggal 7 Oktober 2015 adalah Hari Kiamat dan awal dari Langit yang Baru dan Bumi yang Baru?"
   movie_p1b: "Alkitab menyatakan ini adalah kemungkinan besar."
-  contact_email_desc: "Media inquiries"
+  contact_email_desc: "Media bertanya"
