--- a/locales/es.yml
+++ b/locales/es.yml
@@ -1,38 +1,38 @@
 es:
-  page_title: ~
-  page_description: ~
-  nav_why_oct7th: ~
-  nav_the_video: ~
+  page_title: "Terminará el mundo en Octubre 7?"
+  page_description: "Podría ser Octubre 7 el último día? Evidencia Biblica sugiere que muy probablemente así es."
+  nav_why_oct7th: "Porque Octubre 7?"
+  nav_the_video: "Mira el video"
   nav_helpful_links: "Links relevantes"
   intro_subtitle: "Podrían empezar los Nuevos Cielos y la Nueva Tierra en Octubre 7 del 2015?"
   play_video: "Mira el Video"
   stop_video: "Para el Video"
   view_about: "Mira esto"
   english: Inglés
-  about_title: ~
-  about_p1: ~
-  about_p1_href: ~
+  about_title: "Porque Octubre 7?"
+  about_p1: "Para poder dar una respuesta apropiada, primero empezaremos con Mayo 21 del 2011.  En realidad, es imposible entender porqué Octubre 7. 2015, es un excelente candidato como la posible fecha en la que el mundo se termine, al menos que primero entendamos porqué Mayo 21 fue el comienzo del Día del Juicio."
+  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
   about_p1_link: "(Dale click aquí para más detalles)"
-  about_p2: ~
-  about_p3: ~
-  about_p4: ~
-  about_p5a: ~
-  about_p5b: ~
-  links_title: ~
-  links_ebible_title: ~
-  links_ebible_href: ~
-  links_ebible_desc: ~
-  links_ebible2_title: ~
+  about_p2: "Años atras, el pueblo de Dios sono la trompeta y anuncio al mundo que el DÍA DEL JUICIO empezaría en Mayo 21 del 2011.  Esa fue la fecha mas publicitada como el Día del Juicio que el mundo haya visto.  No tenia presendente y muchos estaban prestando atención.  El mensaje fue publicado en vallas y buses.  También fue visto en carros, pegantinas, camisetas y estaciones de tren.  La gente pudo leer esto en las revistas y periodicos.  Medios de comunicación electronica por todo el mundo también sonaron el mensaje de aviso del evangelio, que si duda el 21 de Mayo de 2011, sería el DÍA DEL JUICIO!"
+  about_p3: "La mayoría del mundo estaba, en un sentido, sosteniendo su respiración colectiva en anticipación de este Juicio final de Dios."
+  about_p4: "A pesar de que muchos esperaban una manifestación física de la ira de Dios, en realidad Dios, trajo un devastador juicio espiritual empezando en Mayo 21, 2011.  Nosotros ahora hemos entrado en el tiempo más oscuro de la historia de la humanidad, en la medida en que estamos viviendo en el Día del Juicio, y nos acercamos al final de todas las cosas, la destrucción del universo, y el comienzo the los nuevos cielos y la nueva tierra, probablemente en Octubre 7 del 2015."
+  about_p5a: "¿Qué significa esto para mí?"
+  about_p5b: "Te animamos a que veas esto <a href=\"#movie-player\">vídeo</a> y explores las muchas <a href=\"#links\">recursos</a> paginas para más información."
+  links_title: "Recursos Fieles para más Estudios"
+  links_ebible_title: "E Bible Fellowship"
+  links_ebible_href: "http://www.ebiblefellowship.com"
+  links_ebible_desc: "Aquí usted encontrará muchas horas de enseñanzas de la Biblia a las que puede escuchar en linea o descargar gratuitamente."
+  links_ebible2_title: "E Bible2"
   links_ebible2_href: "http://ebible2.com/el-juicio-espiritual/"
-  links_ebww_tagline: ~
+  links_ebww_tagline: "Excelete información sobre Octubre 7"
   links_ebww_href: "http://ebww.net/spanish/"
-  links_ebww_desc: ~
-  links_bmi_title: ~
-  links_bmi_desc: ~
-  links_fns_title: ~
-  links_fns_href: ~
-  links_fns_desc: ~
-  movie_href: ~
-  movie_p1a: ~
-  movie_p1b: ~
-  contact_email_desc: ~
+  links_ebww_desc: "Más recursos sobre Octubre 7"
+  links_bmi_title: "Ministerio Internacional Biblico"
+  links_bmi_desc: "La misión de BMI es alimentar las ovejas y declararle al mundo que estamos en este momento viviendo en el Día del Juicio"
+  links_fns_title: "Friday Night Study"
+  links_fns_href: "http://fridaynightstudy.com/es/"
+  links_fns_desc: "Friday Night Study es un grupo de creyentes Cristianos quienes confian en la Biblia únicamente como guia espiritual."
+  movie_href: "https://www.youtube.com/embed/8w7LNlYkrHA"
+  movie_p1a: "Podría ser Octubre 7 del 2015 el fin del mundo y el comienzo de los Nuevos Cielos y la Nueva Tierra?"
+  movie_p1b: "La Biblia indica que es una Fuerte posibilidad."
+  contact_email_desc: "Más preguntas"
