--- a/locales/ru.yml
+++ b/locales/ru.yml
@@ -1,38 +1,38 @@
 ru:
   page_title: "Наступит ли конец мира 7 Октября 2015 года?"
-  page_description: "Наступит ли конец мира 7 Октября 2015 года? Свидетельства из Библии указывают на то, что 7 Октября, весьма вероятно, станет последним днём"
+  page_description: "Возможно ли, что последний день наступит 7 Октября? Библия свидетельствует, что по всей вероятности, конец наступит 7 Октября 2015 года."
   nav_why_oct7th: "Почему 7 Октября?"
   nav_the_video: "Просмотрите это видео"
-  nav_helpful_links: "Вспомогательные Ссылки"
-  intro_subtitle: "Станет ли 7 октября 2015 года началом нового неба и новой земли?"
+  nav_helpful_links: "Полезные Ссылки"
+  intro_subtitle: "Станет ли 7 октября 2015 года началом Нового Неба и Новой Земли?"
   play_video: "Смотреть Видео"
   stop_video: "Остановить видео"
   view_about: "Смотреть описание"
   english: Английский
   about_title: "Почему 7 Октября 2015 года?"
-  about_p1: "Для того, что бы вразумительно ответить на этот вопрос, необходимо начать с объяснения касательно дня 21 Мая 2011 года. Собственно говоря, не имея вначале чёткого представления о том, почему 21 Мая 2011 года стало началом Судного Дня, невозможно было бы и понять, почему именно 7 Октября 2015 года представляет собой  столь превосходную кандидатуру на то, чтобы по всей вероятности, оказаться тем самым днём, когда наступит конец мира. "
-  about_p1_href: ~
+  about_p1: "Для того, что бы вразумительно ответить на этот вопрос, необходимо начать с объяснения касательно дня 21 Мая 2011 года. Собственно говоря, не имея вначале чёткого представления о том, почему 21 Мая 2011 года стало началом Судного Дня, невозможно было бы и понять то, почему именно 7 Октября 2015 года представляет собой  столь превосходную кандидатуру для того, чтобы по всей вероятности, оказаться тем самым днём, когда наступит конец мира. "
+  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
   about_p1_link: "(нажмите здесь для более подробной информации)"
-  about_p2: "Ещё годы назад, Божий народ вострубил трубою, предупреждая мир о том, что СУДНОЙ ДЕНЬ должен был начаться 21 Мая 2011 года. Этот день стал самым известным, из всех, когда либо ранее опубликованных перед глазами всего мира, провозглашённым в качестве Судного Дня. Подобного ему ещё не было никогда и многие обращали на это своё внимание. Новость вещалась с рекламных щитов и была разрекламирована на автобусах. Её так же, можно было увидеть на надписях, пестревших на машинах, на бамперных наклейках, на футболках и даже в метро. Люди узнавали о приближении этого дня, читая об этом в журналах и газетах. Самые известные средства массовой электронной информации по всей планете так же раструбили евангельскую весть, предупреждающую о том, что на самом деле, 21 Мая 2011 года должен был наступить СУДНОЙ ДЕНЬ!"
-  about_p3: "Значительная часть мира, в известном смысле, затаила своё дыхание в ожидании наступления этого последнего Божьего суда."
-  about_p4: "И хотя многие ожидали физического проявления Божьего гнева, при наступлении 21 Мая 2011 года, на самом деле, Бог осуществил разрушительный духовный суд. В настоящее время мы вступили в самый мрачный период в истории Земли; во время, когда мы живём при происходящем Судном Дне, приближаясь к моменту завершения всего и вся (на Земле), окончательному уничтожению вселенной, и к началу нового неба и новой земли, что, весьма вероятно, произойдёт 7 Октября 2015 года."
+  about_p2: "Ещё годы назад, Божий народ вострубил трубою, предупреждая мир о том, что СУДНОЙ ДЕНЬ должен был начаться 21 Мая 2011 года. Этот день, провозглашённый в качестве Судного Дня, стал самым известным из всех других, когда-либо ранее опубликованных перед глазами всего мира. Подобного этому, не было ещё никогда, что привлекало к себе внимание многих. Новость провозглашалась с рекламных щитов и была разрекламирована на автобусах. О ней, так же, можно было узнать по надписям, пестревших на машинах, на бамперных наклейках, на футболках и даже - в вагонах метро. Люди узнавали о приближении этого дня, читая об этом в журналах и газетах. Самые известные средства массовой электронной информации по всей планете, так же раструбили евангельскую весть, предупреждающую о том, что на самом деле, 21 Мая 2011 года должен был наступить СУДНОЙ ДЕНЬ!"
+  about_p3: "Значительная часть людей мира, в известном смысле, затаила своё дыхание, ожидая наступления этого окончательного Божьего суда."
+  about_p4: "И хотя многие ожидали физического проявления Божьего гнева, на самом деле, при наступлении 21 Мая 2011 года, Бог осуществил разрушительный духовный суд. Теперь мы вступили в самый мрачный период истории Земли, живя во время происходящего Судного Дня и приближаясь к моменту завершения всего и вся на Земле и окончательному уничтожению вселенной и началу нового неба и новой земли, что, по всей вероятности, произойдёт 7 Октября 2015 года."
   about_p5a: "Что это означает для меня лично?"
-  about_p5b: "Мы советуем вам просмотреть <a href=\"#movie-player\"> видео </a> и ознакомиться со многими <a href=\"# ссылками \">resources</a> указанными на этой странице, чтобы узнать ещё больше"
+  about_p5b: "Мы советуем вам просмотреть <a href=\"#movie-player\">видео</a> и ознакомиться со многими <a href=\"#links\">ресурсы</a> указанными на этой странице, чтобы узнать ещё больше."
   links_title: "Основанные на Вере Ресурсы для дальнейших Исследований"
-  links_ebible_title: "Библейское Сообщество в Интернете"
-  links_ebible_href: ~
-  links_ebible_desc: "Здесь Вы сможете найти для себя уроки  по изучению Библии, которые можно прослушивать в живую, или в записи (на Английском языке/in English)"
-  links_ebible2_title: ~
+  links_ebible_title: "E Bible Fellowship"
+  links_ebible_href: "http://www.ebiblefellowship.com"
+  links_ebible_desc: "Здесь Вы сможете найти для себя уроки  по изучению Библии, которые можно прослушивать в живую, или в записи (на Английском языке)"
+  links_ebible2_title: "E Bible2"
   links_ebible2_href: "http://ebible2.com/%D0%B4%D1%83%D1%85%D0%BE%D0%B2%D0%BD%D1%8B%D0%B9-%D1%81%D1%83%D0%B4-%D0%BD%D0%B0%D1%87%D0%B0%D0%BB%D1%81%D1%8F-21-%D0%BC%D0%B0%D1%8F-2011-%D0%B3%D0%BE%D0%B4%D0%B0/"
   links_ebww_tagline: "Превосходный источник информации касательно 7 Октября"
   links_ebww_href: "http://ebww.net/russian/"
-  links_ebww_desc: "Имеющиеся Ресурсы на различных иностранных языках касательно информации о 7 Октября"
-  links_bmi_title: "Проповедывание Библии Между Народами"
-  links_bmi_desc: "Задача BMI (Проповедывание Библии Между Народами) заключается в том, чтобы пасти овец Божьих и провозглашать по всему миру о том, что в настоящее время мы живём в период Судного Дня."
-  links_fns_title: "Вечерние Уроки По Пятницам"
-  links_fns_href: ~
-  links_fns_desc: "Friday Night Study (Вечерние Уроки По Пятницам) представляет собой группу верующих в Библию Христиан, которые в своей вере, полагаются лишь только на Библию, рассматриваемую ими в качестве своего единственного духовного ориентира."
-  movie_href: ~
+  links_ebww_desc: "Дополнительные информационные ресурсы касательно 7 Октября"
+  links_bmi_title: "Bible Ministries International"
+  links_bmi_desc: "Задача BMI (Организация по Международному Проповедованию Библии) заключается в том, чтобы пасти овец Божьих и провозглашать по всему миру о том, что теперь мы живём во время периода Судного Дня."
+  links_fns_title: "Friday Night Study (Вечерние Уроки По Пятницам)"
+  links_fns_href: "http://fridaynightstudy.com"
+  links_fns_desc: "Организация Friday Night Study (Вечерние Уроки По Пятницам) представляет собой группу верующих в Библию Христиан, которые в своей вере, полагаются лишь только на Библию, рассматриваемую ими в качестве своего единственного духовного ориентира."
+  movie_href: "https://www.youtube.com/embed/v1kF2IM-GC4"
   movie_p1a: "Возможно ли, что 7 Октября 2015 года станет днём наступления конца мира и началом Нового Неба и Новой земли?"
   movie_p1b: "Библия, с большой вероятностью, указывает на то, что это так."
   contact_email_desc: "Вопросы касательно мультимедии"
