Update URL in the About section for existing published languages.

--- a/locales/en.yml
+++ b/locales/en.yml
@@ -11,7 +11,7 @@ en:
   english: English
   about_title: "Why Oct 7th, 2015?"
   about_p1: "In order to give a proper answer, first we will start with May 21st, 2011. Actually, it is impossible to understand why October 7, 2015, is such an excellent candidate for a likely date that the world will end, unless we first understand fully why May 21st was the beginning of Judgment Day. "
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "(click here for more details)"
   about_p2: "Years ago, God's people blew the trumpet and warned the world that JUDGMENT DAY would begin on May 21, 2011. That date was the most publicized date for the Day of Judgment that the world has ever seen. It was unprecedented and many were paying attention. The message was broadcasted on billboards and advertised on buses. It was also seen on cars, bumper stickers, t-shirts and even in subways. People read about this approaching day in magazines and newspapers. Major electronic media across the globe also trumpeted the warning message of the gospel, that indeed May 21st, 2011, would be JUDGMENT DAY!"
   about_p3: "Much of the world was, in a sense, holding its collective breath in anticipation of this final judgment of God."
