--- a/locales/fr.yml
+++ b/locales/fr.yml
@@ -11,7 +11,7 @@ fr:
   english: Anglais
   about_title: "Pourquoi 7 Oct. 2015?"
   about_p1: "Afin de donner une réponse appropriée, tout d'abord nous allons commencer avec 21 Mai 2011. En fait, il est impossible de comprendre pourquoi 7 Octobre 2015 est aussi un excellent candidat pour une date probable que le monde prendra fin, à moins que nous avions tout d'abord compris pleinement pourquoi 21 Mai était le début du Jour du Jugement. "
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "Cliquez ici pour plus de détails"
   about_p2: "Des années de cela, le peuple de Dieu sonnait la trompette et avertissait le monde que le Jour du Jugement commencerait le 21 Mai 2011. Cette date était la plus médiatisé pour le Jour du Jugement que le monde ait jamais connu. C'était sans précédent et beaucoup étaient attentif. Le message a été diffusé sur les panneaux publicitaires et annoncé sur les autobus. On l’avait vu aussi sur les autocollants pour voitures, t-shirts, et même dans les métros. Les gens lisaient de ce jour qui s'approche dans les magazines et journaux. Les majeur médias électroniques à travers le monde ont aussi claironné le message d'avertissement de l'Évangile, que certainement 21 Mai 2011 serait Jour du Jugement!"
   about_p3: "Une grande partie du monde, dans un sens, retenait son souffle collectif en prévision de ce jugement définitif de Dieu."
