--- a/locales/id.yml
+++ b/locales/id.yml
@@ -11,7 +11,7 @@ id:
   english: Inggris
   about_title: "Mengapa tanggal 7 Oktober 2015?"
   about_p1: "Untuk memberikan sebuah jawaban yang benar, pertama-tama kita akan mulai dengan tanggal 21 Mei 2011. Sebenarnya, tidak mungkin untuk memahami mengapa tanggal 7 Oktober 2015 adalah tanggal yang sangat mungkin di mana Hari Kiamat akan terjadi, kecuali kalau kita lebih dahulu memahami mengapa tanggal 21 Mei 2011 adalah awal dari Hari Penghakiman"
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "(klik di sini untuk memeroleh lebih banyak rincian)"
   about_p2: "Beberapa tahun yang lalu, umat Allah meniup sangkakala dan memperingatkan seluruh dunia bahwa HARI PENGHAKIMAN akan dimulai pada tanggal 21 Mei 2011. Tanggal itu adalah hari yang paling banyak dipublikasikan di dunia sebagai Hari Penghakiman yang pernah dilihat dunia. Hal ini tidak pernah terjadi sebelumnya dan banyak orang menaruh perhatian. Pesan ini disiarkan melalui papan-papan iklan dan diiklankan pada bus-bus. Iklan ini juga bisa terlihat pada mobil-mobil, stiker di bumper mobil, pada kaos T-shirt, dan bahkan di kereta api bawah tanah. Banyak orang membaca tentang tanggal yang sudah semakin mendekat itu di majalah dan surat kabar. Media elektronik di seluruh dunia juga meniup sangkakala dan memperingatkan tentang pesan Injil bahwa tanggal 21 Mei 2011 adalah benar-benar HARI KIAMAT!"
   about_p3: "Sebagian besar orang-orang di dunia sepertinya menahan nafas sebagai antipasi menghadapi penghakiman Allah yang terakhir ini.  "
