--- a/locales/pa-PK.yml
+++ b/locales/pa-PK.yml
@@ -11,7 +11,7 @@ pa-PK:
   english: انگریزی
   about_title: "۷ اکتوبر ۲۰۱۵ ای کیوں؟"
   about_p1: "ایس گل د مناسب جواب دیون لئی ، اسی پہلاں ۲۱ مئی ۲۰۱۱ توں شروع کراں گے۔ در حقیقت، ۷ اکتوبر ۲۰۱۵ اینی شاندار انتم دی تاریخ کیوں اے ایس  نوں سمجھنا ناممکن اے جد تیکر اسی ۲۱ مئی جہیڑی عدالت دے دن دا شروع اے اوس نوں چنگی طراں سمجھ نہ لئے"
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "ہور جان کاری لئی کلک کرو"
   about_p2: "کئی سالاں پہلاں خدا دے لوکاں نے خبرداری دا نرسنگا پھونکیا کہ ۲۱ مئی ۲۰۱۱ نوں ای دنیا دی عدالت شروع ہوئے گی۔ ایس دن دی عدالت دے دن دے طور تے سب توں زیادہ مشہوری کیتی گئی جس نوں ایساں پہلے کدی وی نہیں ویکھیا سی گا۔ ایس دی کیتے وی مثال نہیں ملدی اتے بوہت سارے لوکاں نے ایس تے کن وی دھریا۔ ایس پیغام نوں بل بورڑز دے راہیں اتے بساں تے اشتہاراں دے راہیں دنیا چ پھیلایا گیا۔ ایس سہنے نوں کاراں ، سٹیکراں ، ٹی شرٹز تے اتے سب ویز چ وی ویکھیا گیا۔ لوکاں نے ایس دن دے بارے چ رسالیاں اتے اخباراں چ وی پڑھیا۔ دنیا دے اہم ترین میڈیا نے وی انجیل دے ایس پیغام کہ ۲۱ مئی ۲۰۱۱ ای عدالت دا دن ہوئے گا نوں پوری دنیا چ پھیلایا"
   about_p3: "بوہت ساری دنیا نے بے شک اپیناں سانواں نوں تھامے رکھیاں اتے خدا دے انتم دیہاڑے دی اڈیک کیتی"
