--- a/locales/pl.yml
+++ b/locales/pl.yml
@@ -11,7 +11,7 @@ pl:
   english: angielski
   about_title: "Dlaczego 7 października 2015 roku?"
   about_p1: "Aby udzielić poprawnej odpowiedzi, zacznijmy od 21 maja 2011 r. W istocie nie można zrozumieć, dlaczego 7 października 2015 r. jest takim doskonałym kandydatem na prawdopodobną datę końca świata, jeśli najpierw w pełni nie zrozumiemy, dlaczego 21 maja stanowił początek Dnia Sądu. "
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "(kliknij tutaj, aby poznać więcej szczegółów)"
   about_p2: "Kilka lat temu lud boży zadął w trąbę i ostrzegł świat, że DZIEŃ SĄDU rozpocznie się 21 maja 2011 roku. Ta data była najszerzej publikowaną datą Dnia Sądu, jaką świat kiedykolwiek poznał. To wydarzenie było bez precedensu. Wielu ludzi zwróciło na nie uwagę. Posłanie to było przekazywane za pomocą billboardów i ogłaszane na autobusach. Widziano je również na samochodach, naklejkach na zderzakach, koszulkach, a nawet w metrze. Ludzie czytali o tym zbliżającym się dniu w magazynach i gazetach. Duże media elektroniczne na całym świecie również dęły w trąbę ostrzeżenie z Ewangelii, że faktycznie 21-go maja 2011 r. będzie DZIEŃ SĄDU!"
   about_p3: "Duża część świata w pewnym sensie wspólnie wstrzymała oddech, wyczekując tego ostatecznego sądu bożego."
