--- a/locales/es.yml
+++ b/locales/es.yml
@@ -11,7 +11,7 @@ es:
   english: Inglés
   about_title: "Porque Octubre 7?"
   about_p1: "Para poder dar una respuesta apropiada, primero empezaremos con Mayo 21 del 2011.  En realidad, es imposible entender porqué Octubre 7. 2015, es un excelente candidato como la posible fecha en la que el mundo se termine, al menos que primero entendamos porqué Mayo 21 fue el comienzo del Día del Juicio."
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "(Dale click aquí para más detalles)"
   about_p2: "Años atras, el pueblo de Dios sono la trompeta y anuncio al mundo que el DÍA DEL JUICIO empezaría en Mayo 21 del 2011.  Esa fue la fecha mas publicitada como el Día del Juicio que el mundo haya visto.  No tenia presendente y muchos estaban prestando atención.  El mensaje fue publicado en vallas y buses.  También fue visto en carros, pegantinas, camisetas y estaciones de tren.  La gente pudo leer esto en las revistas y periodicos.  Medios de comunicación electronica por todo el mundo también sonaron el mensaje de aviso del evangelio, que si duda el 21 de Mayo de 2011, sería el DÍA DEL JUICIO!"
   about_p3: "La mayoría del mundo estaba, en un sentido, sosteniendo su respiración colectiva en anticipación de este Juicio final de Dios."
@@ -20,7 +20,7 @@ es:
   about_p5b: "Te animamos a que veas esto <a href=\"#movie-player\">vídeo</a> y explores las muchas <a href=\"#links\">recursos</a> paginas para más información."
   links_title: "Recursos Fieles para más Estudios"
   links_ebible_title: "E Bible Fellowship"
-  links_ebible_href: "http://www.ebiblefellowship.com"
+  links_ebible_href: "http://www.ebiblefellowship.com/es/"
   links_ebible_desc: "Aquí usted encontrará muchas horas de enseñanzas de la Biblia a las que puede escuchar en linea o descargar gratuitamente."
   links_ebible2_title: "E Bible2"
   links_ebible2_href: "http://ebible2.com/el-juicio-espiritual/"
