--- a/locales/ur.yml
+++ b/locales/ur.yml
@@ -11,7 +11,7 @@ ur:
   english: انگریزی
   about_title: "۷اکتوبر ۲۰۱۵ہی کیوں؟"
   about_p1: "اس سوال کا مناسب جواب دینے کے لئے ، ہم پہلے ۲۱مئی ۲۰۱۱ سے ہی شروع کرتے ہیں۔ در حقیقت، یہ سمجھنا ناممکن ہے کہ ۷ اکتوبر ۲۰۱۵ ہی کیوں دنیا کے خاتمے کی اتنی واضح تاریخ ہے جب تک ہم پہلے ۲۱مئی کو جو عدالت کے دن کا شروع ہے اُ س کو اچھی سمجھ نہ لیں۔  "
-  about_p1_href: "http://www.ebiblefellowship.com/archives/2015/03/08/why-october-7-2015-is-the-likely-end-of-the-world-part-1/"
+  about_p1_href: "http://www.ebiblefellowship.com/tag/october-7-2015/"
   about_p1_link: "مزید جانکاری کے لئے یہاں کلک کریں"
   about_p2: "سالوں پہلے ، خدا کے لوگوں نے نرسنگا پھونکا اور دنیا کو خبردار کیا ہے ۲۱ مئی ۲۰۱۱ ہی عدالت کے دن کا شروع ہو گا۔ اور اس تاریخ کی دنیا میں سب سے زیادہ تشہیر کی گئی اور دنیا نے اس طرح کی تشہیر کو پہلے کبھی نہیں دیکھا تھا۔ یہ بالکل بے مثال تھا اور بہت سارے لوگوں نے اس پر کان دھرا۔ اس پیغام کو بل بورڈ کے ذریعے اور بسوں پر اشتہارات کے ذریعے لوگوں تک پہنچایا گیا۔  اس پیغام کو کاروں پر، سیٹکروں پر، ٹی-شرٹز پر اور سب ویز پر بھی دیکھا گیا۔ لوگوں نے اس دن کی آمد کے بارے میں رسائل اور اخباروں میں بھی پڑھا۔ دنیا کے اہم ترین میڈیا گروپس نے بھی پوری دنیا میں انجیل کے اس پیغام سے لوگوں کو خبردار کیا کہ بے شک، ۲۱ مئی ۲۰۱۱ ہی دنیا کی عدالت کا دن ہو گا۔"
   about_p3: "بہت سارے لوگوں نے اپنی سانسیں تھامی رکھیں اور خدا کے آخری عدالت کی امید رکھی"
